--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,10 @@ body {
   background-color: #011f3f;
 }
 
+p {
+    color: #000000;
+  }
+
 #level-title {
   font-family: "Press Start 2P", cursive;
   font-size: 3rem;
